# AuleLiberePoliMi

./: .env.example  .gitignore  LICENSE  Pipfile  README.md  bot.py  docker-compose.yml  find_classrooms.py  free_classroom.py  location.json  pyproject.toml  requirements.txt
docker/bot/: DockerFile
functions/: errorhandler.py  input_check.py  keyboard_builder.py  regex_builder.py  string_builder.py  user_data_handler.py
json/: roomsWithPower.json
json/lang/: en.json  it.json
search/: find_classrooms.py  free_classroom.py
src/: bot.py
src/bot/: pyproject.toml
src/bot/bot/: __init__.py  bot.py
src/bot/bot/commands/: commands.py
src/bot/bot/conversation_handler/: conversation.py
src/bot/bot/conversations/: classroom_search.py
src/bot/bot/functions/: regex_builder.py
src/bot/bot/keyboards/: keyboards.py
src/bot/bot/utils/: errorhandler.py  input_check.py  keyboard_builder.py  keys.py  locations.py  messages.py  user_data_handler.py
src/functions/: input_check.py  keyboard_builder.py
src/json/: location.json
src/mongo/: README.md  pyproject.toml
src/mongo/mongo/: __init__.py  connect.py
src/mongo/mongo/models/: __init__.py  user_models.py
src/scraper/: README.md  pyproject.toml
src/scraper/scraper/: __init__.py
src/search/: powerFileGen.py
utils/: find_classrooms.py  free_classroom.py
