[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["feDann <daniele99@ferrazzo.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.0a4"
python-dotenv = "^0.21.0"
mongo = {path = "../mongo"}
scraper = {path = "../scraper"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
