[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["feDann <daniele99@ferrazzo.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
